    (closes :issue:`291`)

- Enabled `Travis-CI`_ builds for Python_ 3.3
- :meth:`Tables.read_coordinates` now also works with boolean indices input.
  Closes :issue:`287` and :issue:`298`.
- Automatically disable extended float support if a buggy version of HDF5
  is detected (see also `Issues with H5T_NATIVE_LDOUBLE`_).
  See also :issue:`275`, :issue:`290` and :issue:`300`.
- Improved compatibility with numpy_ >= 1.8 (see :issue:`259`)
- The code of the benchmark programs (bench directory) has been updated.
  Closes :issue:`114`.
- The internal Blosc_ library has been updated to version 1.3.0

Bugs fixed
----------

- Fixed detection of platforms supporting blosc
- Fixed a crash that occurred when one attempts to write a numpy_ array to
  an :class:`Atom` (closes :issue:`209` and :issue:`296`)
- Prevent creation of a table with no columns (closes :issue:`18` and
  :issue:`299`)
- Fixed a memory leak that occurs when iterating over
  :class:`CArray`/:class:`EArray` objects (closes :issue:`308`,
  see also :issue:`309`).
  Many thanks to Alistair Muldal.
- Make NaN types sort to the end. Closes :issue:`282` and :issue:`313`
- Fix computation of the buffer size for iterations on rows.
  The buffes size was overestimated resulting in a :exc:`MemoryError`
  in some cases.
  Closes :issue:`316`. Thamks to bbudescu.
- Better check of file open mode. Closes :issue:`318`.

.. _pip: http://www.pip-installer.org
.. _Anaconda: https://store.continuum.io/cshop/anaconda
.. _Canopy: https://www.enthought.com/products/canopy
.. _`Christoph Gohlke suites`: http://www.lfd.uci.edu/~gohlke/pythonlibs
.. _`Issues with H5T_NATIVE_LDOUBLE`: http://hdf-forum.184993.n3.nabble.com/Issues-with-H5T-NATIVE-LDOUBLE-tt4026450.html
.. _Python: http://www.python.org
.. _Blosc: http://www.blosc.org
.. _numpy: http://www.numpy.org
.. _`Travis-CI`: https://travis-ci.org


  **Enjoy data!**

  -- The PyTables Developers


.. Local Variables:
.. mode: rst
.. coding: utf-8
.. fill-column: 72
.. End: